--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package( ZMQ REQUIRED )
 add_subdirectory( protobuf/ )
 add_subdirectory( lib/ )
 add_subdirectory( manager/ )
+add_subdirectory( error/ )
+add_subdirectory( monitor/ )
 
 # set variable for all libraries
 set( LIBS ${LIBS} main_lib gpb_lib ${ZMQ_LIBRARIES} )
